# knot-control-source

./: .gitignore  AUTHORS  COPYING  LICENSE  Makefile.am  README  README.md  bootstrap  bootstrap-configure  configure.ac
doc/: knotctld-api.txt
src/: main.c
src/config/: org.cesar.knot.control.conf
tools/: knotctl.c
